--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "calculator",
-  "version": "0.8.0",
+  "version": "1.8.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "nodent-runtime": "^3.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
