--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
                 },
                 {
                     "key": "X-Frame-Options",
-                    "value": "SAMEORIGIN"
+                    "value": "DENY"
                 },
                 {
                     "key": "Content-Security-Policy",
