Updated Security Headers

--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,14 @@
                 {
                     "key": "X-XSS-Protection",
                     "value": "1; mode=block"
+                },
+                {
+                    "key": "Referrer-Policy",
+                    "value": "no-referrer"
+                },
+                {
+                    "key": "Feature-Policy",
+                    "value": "geolocation 'none'; microphone 'none'; camera 'none'; payment 'none'"
                 }
             ]
         }
