--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
             "source": "/(.*)",
             "headers": [
                 {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://calc-pwa.vercel.app"
+                },
+                {
                     "key": "Cache-Control",
                     "value": "max-age=31536000"
                 },
